--- a/pages/question5.html
+++ b/pages/question5.html
@@ -79,7 +79,7 @@
     
         </div>
     
-            <nav data-role="navbar">
+            <!-- <nav data-role="navbar"> -->
 
                 <form action="">
                     <input type="radio" id="41" name="question5" value="A">
@@ -89,9 +89,12 @@
                     <!-- <input type="submit" value="submit"> -->
                 </form>
 
+                <div class="content__section--button userBtns">
+
                 <button id="4" class="answer-btn">Next Question</button>
                 <!-- Need to record results. Make a function that has a data libaray of results -->
-            </nav>
+            <!-- </nav> -->
+            </div>
 
         </main>
 
