--- a/pages/question6.html
+++ b/pages/question6.html
@@ -82,7 +82,7 @@
                 </div>
             </div>
         
-            <nav data-role="navbar">
+            <!-- <nav data-role="navbar"> -->
 
                 <form action="">
                     <input type="radio" id="51" name="question6" value="A">
@@ -93,9 +93,12 @@
                 </form>
                 <!-- <a href="question7.html" data-icon="bars"
                 class="ui-btn-icon-bottom navView" data-transition="fade">Next</a> -->
+                <div class="content__section--button userBtns">
+
                 <button id="5" class="answer-btn">Next Question </button>
                 <!-- Need to record results. Make a function that has a data libaray of results -->
-            </nav>
+            <!-- </nav> -->
+            </div>
 
         </main>
 
