--- a/pages/question1.html
+++ b/pages/question1.html
@@ -42,7 +42,7 @@
         
                 <h4><br>To: Julie Mooley</h4><br>
                 <div class="body">
-                <h1>
+                <h1 style="font-size: 2em;">
                     Turn your ideas into a bestselling book with our Professional <br>
                 <span style="color: teal;">Ghostwriting Services</span>
                 </h1>
@@ -77,7 +77,7 @@
             </div><br>
             </div>
         
-            <nav data-role="navbar">
+            <!-- <nav data-role="navbar"> -->
 
                 <form action="">
                     <input type="radio" id="01" name="question1" value="A">
@@ -89,9 +89,10 @@
 
                 <!-- <button id="0" class="answer-btn"><a href="question2.html" data-icon="bars"
                         class="ui-btn-icon-bottom navView" data-transition="fade">Next</a> </button> -->
-
-                <button id="0" class="answer-btn">Next Question </button>
-            </nav>
+                        <div class="content__section--button userBtns">
+                            <button id="0" class="answer-btn">Next Question </button>
+            <!-- </nav> -->
+            </div>
 
         </main>
 
