--- a/pages/question2.html
+++ b/pages/question2.html
@@ -77,7 +77,7 @@
                 </div>
             </div>
                 
-            <nav data-role="navbar">
+            <!-- <nav data-role="navbar"> -->
 
                 <form action="">
                     <input type="radio" id="11" name="question1" value="A">
@@ -87,10 +87,12 @@
                     <!-- <input type="submit" value="submit"> -->
                 </form>
 
+                <div class="content__section--button userBtns">
+
                 <button id="1" class="answer-btn">Next Question </button>
                 <!-- Need to record results. Make a function that has a data libaray of results -->
-            </nav>
-
+            <!-- </nav> -->
+</div>
         </main>
 
         <!-- Footer Start -->
