--- a/pages/question3.html
+++ b/pages/question3.html
@@ -59,7 +59,7 @@
     
         </div>
     
-            <nav data-role="navbar">
+            <!-- <nav data-role="navbar"> -->
 
                 <form action="">
                     <input type="radio" id="21" name="question3" value="A">
@@ -68,10 +68,11 @@
                     <label for="22">Valid Email</label><br>
                     <!-- <input type="submit" value="submit"> -->
                 </form>
-
-                <button id="2" class="answer-btn">Next Question </button>
+                <div class="content__section--button userBtns">
+                    <button id="2" class="answer-btn">Next Question </button>
                 <!-- Need to record results. Make a function that has a data libaray of results -->
-            </nav>
+            <!-- </nav> -->
+            </div>
 
         </main>
 
