--- a/pages/question4.html
+++ b/pages/question4.html
@@ -101,7 +101,6 @@
                 </div>
             </div>
         
-            <nav data-role="navbar">
 
                 <form action="">
                     <input type="radio" id="31" name="question4" value="A">
@@ -111,9 +110,12 @@
                     <!-- <input type="submit" value="submit"> -->
                 </form>
 
+                <div class="content__section--button userBtns">
+
                 <button id="3" class="answer-btn">Next Question</button>
                 <!-- Need to record results. Make a function that has a data libaray of results -->
-            </nav>
+            <!-- </nav> -->
+            </div>
 
         </main>
 
