--- a/pages/question7.html
+++ b/pages/question7.html
@@ -64,7 +64,7 @@
                 </p>
             </div>
             
-            <nav data-role="navbar">
+            <!-- <nav data-role="navbar"> -->
 
                 <form action="">
                     <input type="radio" id="61" name="question7" value="A">
@@ -74,10 +74,12 @@
                     <!-- <input type="submit" value="submit"> -->
                 </form>
 
+                <div class="content__section--button userBtns">
+
                 <button id="6" class="answer-btn">Next Question </button>
                 <!-- Need to record results. Make a function that has a data libaray of results -->
-            </nav>
-
+            <!-- </nav> -->
+</div>
         </main>
 
         <!-- Footer Start -->
