--- a/pages/question9.html
+++ b/pages/question9.html
@@ -57,7 +57,7 @@
 
             </div>
            
-            <nav data-role="navbar">
+            <!-- <nav data-role="navbar"> -->
 
                 <form action="">
                     <input type="radio" id="81" name="question9" value="A">
@@ -67,10 +67,12 @@
                     <!-- <input type="submit" value="submit"> -->
                 </form>
 
+                <div class="content__section--button userBtns">
+
                 <button id="8" class="answer-btn">Next Question </button>
                 <!-- Need to record results. Make a function that has a data libaray of results -->
-            </nav>
-
+            <!-- </nav> -->
+</div>
         </main>
 
         <!-- Footer Start -->
