fixed score style

--- a/pages/results.html
+++ b/pages/results.html
@@ -32,8 +32,7 @@
                 
                 <p value="uname" name="uName" id="uName"></p>
                 <p value="emailAddr" name="emailAddr" id="uEmail"></p>
-                <p style="font-size: 1.5em; margin: 20px 0;" value="results" name="results" id="uResults"></p>
-                <p value="results" name="results" >You scored <span  id="uResults"></span>%</p>
+                <p style="font-size: 1.5em; margin: 20px 0;"value="results" name="results" >You scored <span  id="uResults"></span>%</p>
 
                 <input type="hidden" name="userName" id="userName">
                 <input type="hidden" name="userEmailAddr" id="userEmailAddr">
