tweaks - color/form/input/q8-9-10

--- a/pages/question1.html
+++ b/pages/question1.html
@@ -20,7 +20,7 @@
     <section data-theme="b" data-role="page" id="pgQuestion01" data-fullscreen="true">
         <!-- Navbar setup Start -->
         <header data-role="header">
-            <h3>Question #1</h3>
+            <h1>Question #1</h1>
         </header>
 
         <!-- Quiz Nav -->
@@ -79,9 +79,9 @@
         
             <!-- <nav data-role="navbar"> -->
 
-                <form action="">
+                <form class="form-questions" action="">
                     <input type="radio" id="01" name="question1" value="A">
-                    <label for="01">Phishing Email</label><br>
+                    <label for="01">Phishing Email</label>
                     <input type="radio" id="02" name="question1" value="B">
                     <label for="02">Valid Email</label><br>
                     <!-- <input type="submit" value="submit"> -->
