--- a/pages/question10.html
+++ b/pages/question10.html
@@ -19,21 +19,21 @@
     <section data-theme="b" data-role="page" id="pgQuestion02" data-fullscreen="true">
         <!-- Navbar setup Start -->
         <header data-role="header">
-            <h3>Question #10</h3>
+            <h1>Question #10</h1>
         </header>
 
         <!-- Quiz Nav -->
         <main>
 
-            <div class="em-template">
+            <div class="em-template" style="border: none;">
 <img style="width: 1100px;" src="../images/ups phish.png" alt="">
             </div>
            
             <!-- <nav data-role="navbar"> -->
 
-                <form action="">
+                <form class="form-questions" action="">
                     <input type="radio" id="91" name="question10" value="A">
-                    <label for="91">Phishing Email</label><br>
+                    <label for="91">Phishing Email</label>
                     <input type="radio" id="92" name="question10" value="B">
                     <label for="92">Valid Email</label><br>
                     <!-- <input type="submit" value="submit"> -->
