--- a/pages/question4.html
+++ b/pages/question4.html
@@ -20,7 +20,7 @@
     <section data-theme="b" data-role="page" id="pgQuestion02" data-fullscreen="true">
         <!-- Navbar setup Start -->
         <header data-role="header">
-            <h3>Question #4</h3>
+            <h1>Question #4</h1>
         </header>
 
         <!-- Quiz Nav -->
@@ -102,9 +102,9 @@
             </div>
         
 
-                <form action="">
-                    <input type="radio" id="31" name="question4" value="A">
-                    <label for="31">Phishing Email</label><br>
+            <form class="form-questions" action="">
+                <input type="radio" id="31" name="question4" value="A">
+                    <label for="31">Phishing Email</label>
                     <input type="radio" id="32" name="question4" value="B">
                     <label for="32">Valid Email</label><br>
                     <!-- <input type="submit" value="submit"> -->
