--- a/pages/register.html
+++ b/pages/register.html
@@ -12,7 +12,7 @@
 </head>
 
 <body class="ui-body">
-    <div class="content">
+    <div class="content content-register">
 
     <!-- Sign Up Page Start REGISTRATION-->
     <section class="content__section" data-role="page" id="pgSignUp" data-theme="b" data-fullscreen="true">
@@ -34,11 +34,11 @@
                 <form class="content__section--register-form" id="mySignUpForm">
                     <fieldset class="content__section--register-fieldset"> 
                         <label class="register-name" for="">First Name</label>
-                        <input class="register-name-field" id="fName" type="text">
+                        <input class="register-input register-input-name" id="fName" type="text">
                         <label class="register-lastname" for="">Last Name</label>
-                        <input class="register-lastname-field" id="lName" type="text">
+                        <input class="register-input  register-input-lastname" id="lName" type="text">
                         <label class="register-email" for="Your Email">Email Address</label>
-                        <input class="register-email-field" id="uEmail" type="email">
+                        <input class="register-input register-input-email" id="uEmail" type="email">
                     </fieldset>
                     <!-- 
                     <a href="./instructions.html"> </a> -->
