--- a/pages/question3.html
+++ b/pages/question3.html
@@ -20,7 +20,7 @@
     <section data-theme="b" data-role="page" id="pgQuestion02" data-fullscreen="true">
         <!-- Navbar setup Start -->
         <header data-role="header">
-            <h3>Question #3</h3>
+            <h1>Question #3</h1>
         </header>
 
         <!-- Quiz Nav -->
@@ -61,9 +61,9 @@
     
             <!-- <nav data-role="navbar"> -->
 
-                <form action="">
+                <form class="form-questions" action="">
                     <input type="radio" id="21" name="question3" value="A">
-                    <label for="21">Phishing Email</label><br>
+                    <label for="21">Phishing Email</label>
                     <input type="radio" id="22" name="question3" value="B">
                     <label for="22">Valid Email</label><br>
                     <!-- <input type="submit" value="submit"> -->
