--- a/pages/question5.html
+++ b/pages/question5.html
@@ -20,7 +20,7 @@
     <section data-theme="b" data-role="page" id="pgQuestion02" data-fullscreen="true">
         <!-- Navbar setup Start -->
         <header data-role="header">
-            <h3>Question #5</h3>
+            <h1>Question #5</h1>
         </header>
 
         <!-- Quiz Nav -->
@@ -81,9 +81,9 @@
     
             <!-- <nav data-role="navbar"> -->
 
-                <form action="">
+                <form class="form-questions" action="">
                     <input type="radio" id="41" name="question5" value="A">
-                    <label for="41">Phishing Email</label><br>
+                    <label for="41">Phishing Email</label>
                     <input type="radio" id="42" name="question5" value="B">
                     <label for="42">Valid Email</label><br>
                     <!-- <input type="submit" value="submit"> -->
