--- a/pages/question6.html
+++ b/pages/question6.html
@@ -20,7 +20,7 @@
     <section data-theme="b" data-role="page" id="pgQuestion02" data-fullscreen="true">
         <!-- Navbar setup Start -->
         <header data-role="header">
-            <h3>Question #6</h3>
+            <h1>Question #6</h1>
         </header>
 
         <!-- Quiz Nav -->
@@ -84,9 +84,9 @@
         
             <!-- <nav data-role="navbar"> -->
 
-                <form action="">
+                <form class="form-questions" action="">
                     <input type="radio" id="51" name="question6" value="A">
-                    <label for="51">Phishing Email</label><br>
+                    <label for="51">Phishing Email</label>
                     <input type="radio" id="52" name="question6" value="B">
                     <label for="52">Valid Email</label><br>
                     <!-- <input type="submit" value="submit"> -->
