--- a/pages/question7.html
+++ b/pages/question7.html
@@ -20,7 +20,7 @@
     <section data-theme="b" data-role="page" id="pgQuestion02" data-fullscreen="true">
         <!-- Navbar setup Start -->
         <header data-role="header">
-            <h3>Question #7</h3>
+            <h1>Question #7</h1>
         </header>
 
         <!-- Quiz Nav -->
@@ -66,9 +66,9 @@
             
             <!-- <nav data-role="navbar"> -->
 
-                <form action="">
+                <form class="form-questions" action="">
                     <input type="radio" id="61" name="question7" value="A">
-                    <label for="61">Phishing Email</label><br>
+                    <label for="61">Phishing Email</label>
                     <input type="radio" id="62" name="question7" value="B">
                     <label for="62">Valid Email</label><br>
                     <!-- <input type="submit" value="submit"> -->
