--- a/pages/question8.html
+++ b/pages/question8.html
@@ -19,13 +19,13 @@
     <section data-theme="b" data-role="page" id="pgQuestion02" data-fullscreen="true">
         <!-- Navbar setup Start -->
         <header data-role="header">
-            <h3>Question #8</h3>
+            <h1>Question #8</h1>
         </header>
 
         <!-- Quiz Nav -->
         <main>
 
-            <div class="em-template">
+            <div class="em-template" style="border: none;">
 <img src="../images/amazon phish.png" alt="">
 
 
@@ -33,9 +33,9 @@
            
             <!-- <nav data-role="navbar"> -->
 
-                <form action="">
+                <form class="form-questions" action="">
                     <input type="radio" id="71" name="question8" value="A">
-                    <label for="71">Phishing Email</label><br>
+                    <label for="71">Phishing Email</label>
                     <input type="radio" id="72" name="question8" value="B">
                     <label for="72">Valid Email</label><br>
                     <!-- <input type="submit" value="submit"> -->
