--- a/pages/question9.html
+++ b/pages/question9.html
@@ -19,22 +19,22 @@
     <section data-theme="b" data-role="page" id="pgQuestion02" data-fullscreen="true">
         <!-- Navbar setup Start -->
         <header data-role="header">
-            <h3>Question #9</h3>
+            <h1>Question #9</h1>
         </header>
 
         <!-- Quiz Nav -->
         <main>
 
-            <div class="em-template">
-<img src="../images/netflix phish.png" alt="">
+            <div class="em-template" style="border: none;">
+<img style="width: 70%;" src="../images/netflix phish.png" alt="">
 
             </div>
            
             <!-- <nav data-role="navbar"> -->
 
-                <form action="">
+                <form class="form-questions" action="">
                     <input type="radio" id="81" name="question9" value="A">
-                    <label for="81">Phishing Email</label><br>
+                    <label for="81">Phishing Email</label>
                     <input type="radio" id="82" name="question9" value="B">
                     <label for="82">Valid Email</label><br>
                     <!-- <input type="submit" value="submit"> -->
