--- a/pages/question5.html
+++ b/pages/question5.html
@@ -15,7 +15,7 @@
 </head>
 
 <body class="ui-body">
-
+<div class="content">
     <!-- Question #1 -->
     <section data-theme="b" data-role="page" id="pgQuestion02" data-fullscreen="true">
         <!-- Navbar setup Start -->
@@ -104,7 +104,7 @@
         </footer>
     </section>
 
-
+</div>
 </body>
 
 <script src="../js/scripts.js"></script>
