remove label, add placeholder

--- a/pages/register.html
+++ b/pages/register.html
@@ -33,12 +33,12 @@
             <article role="main" class="ui-content">
                 <form class="content__section--register-form" id="mySignUpForm">
                     <fieldset class="content__section--register-fieldset"> 
-                        <label class="register-name" for="">First Name</label>
-                        <input class="register-input register-input-name" id="fName" type="text">
-                        <label class="register-lastname" for="">Last Name</label>
-                        <input class="register-input  register-input-lastname" id="lName" type="text">
-                        <label class="register-email" for="Your Email">Email Address</label>
-                        <input class="register-input register-input-email" id="uEmail" type="email">
+                        <!-- <label class="register-name" for="">First Name</label> -->
+                        <input class="register-input register-input-name" id="fName" type="text" placeholder="First name">
+                        <!-- <label class="register-lastname" for="">Last Name</label> -->
+                        <input class="register-input  register-input-lastname" id="lName" type="text" placeholder="Last name">
+                        <!-- <label class="register-email" for="Your Email">Email Address</label> -->
+                        <input class="register-input register-input-email" id="uEmail" type="email" placeholder="Email address">
                     </fieldset>
                     <!-- 
                     <a href="./instructions.html"> </a> -->
