content edit/new rounded gif

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     <section class="content__section" data-theme="b" data-role="page" id="pgWelcome" data-fullscreen="true">
         <!-- Navbar setup Start -->
         <header class="content__section--title" data-role="header" data-position="fixed">
-            <h1>Will you take the bait?</h1>
+            <h1>Would you take the bait?</h1>
         </header>
         <div class="content__section--text">
                         <p>
-                            Phishing can be more difficult to detect than you might expect. Phishing is when someone pretends to be someone you know in order to deceive you into giving up your personal information. Can you distinguish what's real and what's not? 
+                            Detecting phishing can be more difficult than you might expect. Phishing is when someone pretends to be someone you know in order to deceive you into giving up your personal information. Can you distinguish what's real and what's not? 
                             <!-- Welcome to the 227 InfoSec phishing training quiz. You will need to register with your name and
                     email. This registration will be used to record your quiz results. Please select the "Sign Up"
                     button to register. -->
@@ -29,7 +29,7 @@
                 </div>
 <!-- <article> -->
             <div class="content__section--img-container img-container">
-                <img class="responsiveImage" width="300" height="300" src="../images/phishing-circle.gif"
+                <img class="responsiveImage" width="300" height="auto" src="../images/circle-phish.gif"
                     alt="Welcome-logo">
             </div>
         <!-- </article> -->
