content edit/add image

--- a/pages/instructions.html
+++ b/pages/instructions.html
@@ -29,11 +29,15 @@
             <div class="content__section--text">
 
             <p>You will be presented a number of emails. Some of these emails will be legitimate and some of them will
-                be examples of phishing. Your job is to identify the parts of the emails that are suspect and determine
-                the appropriate action.</p><br><br>
+                be examples of phishing. Your job is to identify whether the email is phishing or if it is for real.</p><br><br>
 
-                <H4>DO NOT HIT THE BACK BUTTON ONCE YOU BEGIN THE TEST, YOUR RESULTS WILL BE LOST</H4><br><br>
+                <p><strong>Do not hit back button </strong>once you begin the quiz, <br>otherwise your results will be <strong>lost</strong>.</p><br><br>
                 </div>
+                <div class="content__section--img-container img-container">
+                    <img class="responsiveImage" width="300" height="auto" src="../images/phishin.gif"
+                        alt="Welcome-logo">
+                </div>
+    
             <!-- <nav data-role="navbar"> -->
                 <!-- #pgQuestion01 -->
                 <div class="content__section--button userBtns">
