--- a/pages/register.html
+++ b/pages/register.html
@@ -45,7 +45,7 @@
                     <div class="content__section--button content__section--button-register userBtns">
 
                     <button class="ui-btn ui-shadow ui-corner-all ui-btn-icon-left ui-icon-action" id="uSignUpBtn"
-                        type="submit">Register</button>
+                        type="submit">Continue</button>
                     <!-- This should take them to instructions page -->
                     </div>
                 </form>
