edit content/update btns/update footer

--- a/index.html
+++ b/index.html
@@ -18,14 +18,16 @@
         <!-- Navbar setup Start -->
         <header class="content__section--title" data-role="header" data-position="fixed">
             <h1>Would you take the bait?</h1>
+            <br>
         </header>
         <div class="content__section--text">
                         <p>
-                            Detecting phishing can be more difficult than you might expect. Phishing is when someone pretends to be someone you know in order to deceive you into giving up your personal information. Can you distinguish what's real and what's not? 
+                            Detecting phishing can be more difficult than you might expect. Phishing is when someone pretends to be someone you know in order to deceive you into giving up your personal information. <br><br>Can you distinguish what's real and what's not? 
                             <!-- Welcome to the 227 InfoSec phishing training quiz. You will need to register with your name and
                     email. This registration will be used to record your quiz results. Please select the "Sign Up"
                     button to register. -->
                 </p>
+                <br>
                 </div>
 <!-- <article> -->
             <div class="content__section--img-container img-container">
@@ -33,16 +35,16 @@
                     alt="Welcome-logo">
             </div>
         <!-- </article> -->
-            <div class="content__section--button userBtns">
+            <div class="content__section--button">
                 <a ”javascript:history.go(0)” href="./pages/register.html"><button>TAKE QUIZ</button></a>
             </div>
 
 
-        <footer data-role="footer" data-position="fixed">
-            <h4>227 InfoSec, Inc. 2022&copy;</h4>
-        </footer>
 
     </section>
+        <footer data-role="footer" data-position="fixed">
+            <h6>227 InfoSec, Inc. 2022&copy;</h6>
+        </footer>
 </div>
 </body>
 
