edit content/update btns and footer

--- a/pages/instructions.html
+++ b/pages/instructions.html
@@ -31,7 +31,7 @@
             <p>You will be presented a number of emails. Some of these emails will be legitimate and some of them will
                 be examples of phishing. Your job is to identify whether the email is phishing or if it is for real.</p><br><br>
 
-                <p><strong>Do not hit back button </strong>once you begin the quiz, <br>otherwise your results will be <strong>lost</strong>.</p><br><br>
+                <p><strong>Do not hit back button </strong>once you begin the quiz, <br>otherwise your results will be <strong>lost</strong>.</p><br>
                 </div>
                 <div class="content__section--img-container img-container">
                     <img class="responsiveImage" width="300" height="auto" src="../images/phishin.gif"
@@ -40,7 +40,7 @@
     
             <!-- <nav data-role="navbar"> -->
                 <!-- #pgQuestion01 -->
-                <div class="content__section--button userBtns">
+                <div class="content__section--button">
 
                 <a href="question1.html" data-icon="bars" class="ui-btn-icon-bottom navView"
                         data-transition="fade"><button>Start Quiz</button></a> 
@@ -51,8 +51,8 @@
 
     </section>
         <!-- Footer Start -->
-        <footer style="margin-left: 100px;" data-role="footer" data-position="fixed">
-            <h4>227 InfoSec, Inc. 2022&copy;</h4>
+        <footer data-role="footer" data-position="fixed">
+            <h6>227 InfoSec, Inc. 2022&copy;</h6>
         </footer>
 </div>
    
