--- a/pages/question2.html
+++ b/pages/question2.html
@@ -19,7 +19,7 @@
     <!-- Question #1 -->
     <section data-theme="b" data-role="page" id="pgQuestion02" data-fullscreen="true">
         <!-- Navbar setup Start -->
-        <header data-role="header">
+        <header class="question-header" data-role="header">
             <h1>Question #2</h1>
         </header>
 
@@ -97,7 +97,7 @@
 
         <!-- Footer Start -->
         <footer data-role="footer" data-position="fixed">
-            <h4>227 InfoSec, Inc. 2022</h4>
+            <h6>227 InfoSec, Inc. 2022&copy;</h6>
         </footer>
     </section>
 
