--- a/pages/question9.html
+++ b/pages/question9.html
@@ -18,7 +18,7 @@
     <!-- Question #1 -->
     <section data-theme="b" data-role="page" id="pgQuestion02" data-fullscreen="true">
         <!-- Navbar setup Start -->
-        <header data-role="header">
+        <header class="question-header" data-role="header">
             <h1>Question #9</h1>
         </header>
 
@@ -50,7 +50,7 @@
 
         <!-- Footer Start -->
         <footer data-role="footer" data-position="fixed">
-            <h4>227 InfoSec, Inc. 2022</h4>
+            <h6>227 InfoSec, Inc. 2022&copy;</h6>
         </footer>
     </section>
 
