--- a/pages/results.html
+++ b/pages/results.html
@@ -62,8 +62,8 @@
     </section>
 
         <!-- Footer Start -->
-        <footer style="margin-left: 100px;" data-role="footer" data-position="fixed">
-            <h4>227 InfoSec, Inc. 2022&copy;</h4>
+        <footer data-role="footer" data-position="fixed">
+            <h6>227 InfoSec, Inc. 2022&copy;</h6>
         </footer>
 
 </div>
