--- a/pages/register.html
+++ b/pages/register.html
@@ -19,10 +19,11 @@
 
         <header class="content__section--pages" data-role="header">
             <h1>Register</h1>
+            <br>
         </header>
 
         <div class="content__section--text">
-            <p>Welcome to the 227 InfoSec phishing training quiz. <br><br>
+            <p>Welcome to the 227 InfoSec phishing training quiz. <br>
             Registration is necessary to record your results.
             <!-- Enter your name and email. Failure to do so will result in recieving no credit. -->
         </p>
@@ -53,7 +54,7 @@
         </main>
 
         <footer class="footer-register" data-role="footer" data-position="fixed">
-            <h4>227 InfoSec, Inc. 2022&copy;</h4>
+            <h6>227 InfoSec, Inc. 2022&copy;</h6>
         </footer>
 </div>
 </body>
