--- a/pages/old.question1.html
+++ b/pages/old.question1.html
@@ -14,7 +14,7 @@
     <title>Phishing Quiz</title>
 </head>
 
-<body class="ui-body">
+<body id="0" class="ui-body">
     <div class="content">
         <!-- Question #1 -->
     <section data-theme="b" data-role="page" id="pgQuestion01" data-fullscreen="true">
@@ -79,18 +79,19 @@
         
             <!-- <nav data-role="navbar"> -->
 
-                <form class="form-questions" action="">
+                <!-- <form class="form-questions" action="">
                     <input type="radio" id="01" name="question1" value="A">
                     <label for="01">Phishing Email</label>
                     <input type="radio" id="02" name="question1" value="B">
-                    <label for="02">Valid Email</label><br>
+                    <label for="02">Valid Email</label><br> -->
                     <!-- <input type="submit" value="submit"> -->
-                </form>
+                <!-- </form> -->
+                <button class="answerButtons" id="01" value="A">Phishing Email</button> <button class="answerButtons" id="02" value="B">Valid Email</button>
 
                 <!-- <button id="0" class="answer-btn"><a href="question2.html" data-icon="bars"
                         class="ui-btn-icon-bottom navView" data-transition="fade">Next</a> </button> -->
                         <div class="content__section--button userBtns">
-                            <button id="0" class="answer-btn">Next Question </button>
+                            <button id="0" class="next-btn">Next Question </button>
             <!-- </nav> -->
             </div>
 
